# LabWise

./: .gitignore  Cargo.toml  MASTER_PLAN.md  package-lock.json  package.json
api/: package-lock.json  package.json  wrangler.jsonc
api/src/: index.ts
bridge/: Cargo.toml
bridge/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: component_library.rs  governance.rs  lib.rs  mna.rs  netlist.rs
projection/: index.html  package-lock.json  package.json  vite.config.ts
projection/src/: App.css  App.tsx  types.ts
projection/src/store/: circuitStore.ts  index.ts  uiStore.ts
projection/src/synapse/: extractionPipeline.ts  index.ts  promptBuilder.ts  schemas.ts
projection/src/utils/: pdfExtractor.ts
projection/src/wokwi/: CircuitBoard.tsx  Mapper.ts  WokwiEmbed.tsx
schemas/: netlist.schema.json
scripts/: build-wasm.ps1  build-wasm.sh
